# tars2squashfs

./: LICENSE  README.md  pyproject.toml
src/tars2squashfs/: __init__.py  main.py
