[project]
name = "tars2squashfs"
version = "0.1.0"
authors = [
    { name = "Lennart Keller", email = "lennartkeller@gmail.com"}
]
description = "Convert the contents of multiple tar archives into a SquashFS filesystem"
readme = "README.md"
license = { text = "MIT" }
keywords = ["tar", "squashfs", "compression", "filesystem", "archive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: System :: Filesystems",
]
requires-python = ">=3.13"
dependencies = [
    "tqdm>=4.67.1,<5.0.0",
]

[project.scripts]
tars2squashfs = "tars2squashfs.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
      packages = ["src/tars2squashfs"]

[dependency-groups]
dev = [
    "ruff>=0.12.1,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
]
